@@ -42,6 +42,8 @@ class Roda
       # :default_mime :: The default mime type to use if the mime type is not recognized.
       # :gzip :: Whether to serve already gzipped files with a .gz extension for clients
       #          supporting gzipped transfer encoding.
+      # :brotli :: Whether to serve already brotli-compressed files with a .br extension
+      #            for clients supporting brotli transfer encoding.
       # :headers :: A hash of headers to use for statically served files
       # :root :: Use this option for the root of the public directory (default: "public")
       def self.configure(app, opts={})
@@ -52,6 +54,7 @@ class Roda
         end
         app.opts[:public_server] = ::Rack::File.new(app.opts[:public_root], opts[:headers]||{}, opts[:default_mime] || 'text/plain')
         app.opts[:public_gzip] = opts[:gzip]
+        app.opts[:public_brotli] = opts[:brotli]
       end
 
       module RequestMethods
@@ -65,23 +68,8 @@ class Roda
             server = roda_opts[:public_server]
             path = ::File.join(server.root, *public_path_segments(path))
 
-            if roda_opts[:public_gzip] && env['HTTP_ACCEPT_ENCODING'] =~ /\bgzip\b/
-              gzip_path = path + '.gz'
-
-              if public_file_readable?(gzip_path)
-                res = public_serve(server, gzip_path)
-                headers = res[1]
-
-                unless res[0] == 304
-                  if mime_type = ::Rack::Mime.mime_type(::File.extname(path), 'text/plain')
-                    headers['Content-Type'] = mime_type
-                  end
-                  headers['Content-Encoding'] = 'gzip'
-                end
-
-                halt res
-              end
-            end
+            public_serve_compressed(server, path, '.br', 'br') if roda_opts[:public_brotli]
+            public_serve_compressed(server, path, '.gz', 'gzip') if roda_opts[:public_gzip]
 
             if public_file_readable?(path)
               halt public_serve(server, path)
@@ -111,6 +99,26 @@ class Roda
           # :nocov:
           false
           # :nocov:
+        end
+
+        def public_serve_compressed(server, path, suffix, encoding)
+          if env['HTTP_ACCEPT_ENCODING'] =~ /\b#{encoding}\b/
+            compressed_path = path + suffix
+
+            if public_file_readable?(compressed_path)
+              res = public_serve(server, compressed_path)
+              headers = res[1]
+
+              unless res[0] == 304
+                if mime_type = ::Rack::Mime.mime_type(::File.extname(path), 'text/plain')
+                  headers['Content-Type'] = mime_type
+                end
+                headers['Content-Encoding'] = encoding
+              end
+
+              halt res
+            end
+          end
         end
 
         if ::Rack.release > '2'
