@@ -1,0 +1,1 @@
+body { background-color: cyan; }
