@@ -2,6 +2,8 @@
 
 * Add url method to path plugin, similar to path but returning the entire URL (jeremyevans)
 
+* Add :brotli option to public plugin to supplement it to serve brotli-compressed files like :gzip does for gzipped files (hmdne)
+
 = 3.32.0 (2020-05-15)
 
 * Make :dependencies option in assets plugin work correctly with render plugin template caching (jeremyevans) (#191)
